This is what was used to run the midterm. \n \n Fun!(?)

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"test-fa21.csv\"\n",
+    "filename_change_if_youre_testing = \"321online-midterm.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +82,8 @@
     "coredf.fillna(0, inplace=True)\n",
     "supplementaldf.fillna(0, inplace=True)\n",
     "\n",
-    "#coredf.drop(\"N\", axis=1, inplace=True)\n",
-    "#supplementaldf.drop(\"N\", axis=1, inplace=True)\n",
+    "coredf.drop(\"N\", axis=1, inplace=True)\n",
+    "supplementaldf.drop(\"N\", axis=1, inplace=True)\n",
     "\n",
     "\n",
     "# I truly have no idea why \"Name\" isn't a common index, but I need to specify it.\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
     "#for individual in class_scores:\n",
     "\n",
     "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"This is a test run. Ignore these files...\"\n",
+    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
     "#extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
     "#extra_text = \"After checkpoint 15\"\n",
     "\n",
