--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "# print(discrete_threshold_table % final_321)\n",
     "\n",
     "def decide_letter_grade(individual):\n",
-    "    print(threshold_table)\n",
+    "#    print(threshold_table)\n",
     "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 0, \"WebAssign\": threshold_table[2]},\n",
     "           \"B\": {\"Points\": threshold_table[3], \"Below P\": threshold_table[4], \"WebAssign\": threshold_table[5]},\n",
     "           \"C\": {\"Points\": threshold_table[6], \"Below P\": threshold_table[7], \"WebAssign\": threshold_table[8]},\n",
@@ -138,7 +138,8 @@
     "    elif individual.Marks.Score >= threshold['F'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"F\"][\"Below P\"] and individual.WebAssign >= threshold[\"F\"][\"WebAssign\"]:\n",
     "        return \"F\"\n",
     "    else:\n",
-    "        return \"None of the above?!?\"\n"
+    "        return \"F\"\n",
+    "        #return \"None of the above?!?\"\n"
    ]
   },
   {
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
     "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
     "\n",
-    "    print(individual)\n",
+    "#    print(individual)\n",
     "    output = template.render(template_vars)\n",
     "    HTML(string=output).write_pdf(\"./reports/\"+individual.Name+\".pdf\",stylesheets=[\"./report.css\"])\n",
     "   "
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +204,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"144test.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"144-midterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,12 +328,14 @@
     "#extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
     "#extra_text = \"Final grades after checkpoint 15 was completed.\"\n",
     "\n",
-    "extra_text = \"Test run. Ignore these numbers.\"\n",
+    "\n",
     "\n",
     "# for individual in class_scores: \n",
     "#     print_the_report_for(individual)\n",
     "\n",
-    "midtermOrFinal = \"Final\"\n",
+    "midtermOrFinal = \"Midterm\"\n",
+    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "\n",
     "\n",
     "\n",
     "course = \"math144\"  #math242 or math243 as a string\n",
@@ -345,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
