--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"321online-midterm.csv\"\n",
+    "filename_change_if_youre_testing = \"321seatedlastweek.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
     "</tbody> </table>\"\"\"\n",
     "\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_321 # ... hard coded :-(\n",
+    "threshold_table = final_321 # ... hard coded :-(\n",
     "\n",
     "\n",
     "\n",
@@ -176,15 +176,16 @@
     "def decide_letter_grade(individual):\n",
     "    threshold = {\"A\": {\"Core Mastered\": threshold_table[0], \"Core Proficient\": 0,\n",
     "                     \"Supplemental Mastered\": threshold_table[1], \"Supplemental Proficient\": threshold_table[1]+threshold_table[2]-1},\n",
-    "              \"B\": {\"Core Mastered\": threshold_table[3], \"Core Proficient\": threshold_table[3]+threshold_table[4],\n",
+    "              \"B\": {\"Core Mastered\": threshold_table[3], \"Core Proficient\": threshold_table[3] + threshold_table[4] - 1,\n",
     "                     \"Supplemental Mastered\": threshold_table[5], \"Supplemental Proficient\": threshold_table[5]+threshold_table[6]-1},\n",
-    "              \"C\": {\"Core Mastered\": threshold_table[7], \"Core Proficient\": threshold_table[8],\n",
+    "              \"C\": {\"Core Mastered\": threshold_table[7], \"Core Proficient\": threshold_table[7] + threshold_table[8] - 1,\n",
     "                     \"Supplemental Mastered\": threshold_table[9], \"Supplemental Proficient\": threshold_table[9]+threshold_table[10]-1},\n",
     "              \"D\": {\"Core Mastered\": 0, \"Core Proficient\": threshold_table[11],\n",
     "                     \"Supplemental Mastered\": 0, \"Supplemental Proficient\": threshold_table[12]},\n",
     "              \"F\": {\"Core Mastered\": 0, \"Core Proficient\": 0,\n",
     "                     \"Supplemental Mastered\": 0, \"Supplemental Proficient\": 0},\n",
     "          }\n",
+    "    \n",
     "    \n",
     "    if individual.CoreMarks.Mastered >= threshold['A'][\"Core Mastered\"] and individual.CoreMarks.Proficient >= threshold[\"A\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['A'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient >= threshold[\"A\"][\"Supplemental Proficient\"]:\n",
     "        return \"A\"\n",
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,19 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
-    "#extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "midtermOrFinal = \"Final\"\n",
+    "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "extra_text = \"<h2>Almost the end of classes!</h2><p> <b>Note:</b> this is prepared Thanksiving week.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
     "#extra_text = \"After checkpoint 15\"\n",
-    "\n",
     "\n",
     "for student in class_scores:\n",
     "    print_the_report_for(student)\n",
@@ -257,6 +256,13 @@
     "\n",
     "#print_the_report_for(class_scores[5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
