--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "\n",
     "def decide_letter_grade(individual):\n",
     "#    print(threshold_table)\n",
-    "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 0, \"WebAssign\": threshold_table[2]},\n",
+    "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 1, \"WebAssign\": threshold_table[2]},\n",
     "           \"B\": {\"Points\": threshold_table[3], \"Below P\": threshold_table[4], \"WebAssign\": threshold_table[5]},\n",
     "           \"C\": {\"Points\": threshold_table[6], \"Below P\": threshold_table[7], \"WebAssign\": threshold_table[8]},\n",
     "           \"D\": {\"Points\": threshold_table[9], \"Below P\": 1000, \"WebAssign\": threshold_table[10]},  \n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -204,7 +204,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"144-midterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"144lastweek.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,14 +333,16 @@
     "# for individual in class_scores: \n",
     "#     print_the_report_for(individual)\n",
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "midtermOrFinal = \"Final\"\n",
+    "# extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward. <br><br>I adjusted the grades so that an A can have one grade below P since DA7 just showed up this weekend.\"\n",
+    "extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> this is prepared during Thanksgiving week.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15, 16 and during the finals week. You also can work on every WebAssign assignment until 12/6<p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "course = \"math144\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_144 # final_242 if course==\"math242\" else final_243\n",
+    "threshold_table = final_144 # final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
     "threshold_html_table = calculus_threshold_table % threshold_table"
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
