Spring 22 midterm for 321 ready.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"144lastweek.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"144final.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -335,8 +335,8 @@
     "\n",
     "midtermOrFinal = \"Final\"\n",
     "# extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward. <br><br>I adjusted the grades so that an A can have one grade below P since DA7 just showed up this weekend.\"\n",
-    "extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> this is prepared during Thanksgiving week.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15, 16 and during the finals week. You also can work on every WebAssign assignment until 12/6<p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
-    "\n",
+    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> this is prepared during Thanksgiving week.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15, 16 and during the finals week. You also can work on every WebAssign assignment until 12/6<p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
     "\n",
     "\n",
@@ -378,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
