--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "               29, 50,  #D\n",
     "               29, 50) #F\n",
     "\n",
-    "midterm_242 = (\"(through section 3.5)\", \n",
+    "midterm_242 = (\"(through section 3.7)\", \n",
     "               21, 80,  #A \n",
     "               19, 2, 70, #B\n",
     "               16, 4, 60, #C\n",
@@ -75,19 +75,6 @@
     "               28, 50,  #D\n",
     "               28, 50) #F\n",
     "\n",
-    "\n",
-    "midterm_321 = ( 5, 3, 2, #A \n",
-    "               4, 1, 2, 2, #B\n",
-    "               3, 2, 1, 3, #C\n",
-    "               3, 3, #D\n",
-    "               3) #F\n",
-    "\n",
-    "final_321 = ( 10, 7, 6, #A \n",
-    "               7, 3, 5, 8, #B\n",
-    "               5, 5, 5, 5, #C\n",
-    "               5, 7, #D\n",
-    "               5) #F\n",
-    "\n",
     "calculus_threshold_table = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
     "<th>Letter Grade</th> \n",
     "<th>Course Learning Targets</th> \n",
@@ -100,22 +87,6 @@
     "<tr> <td>D</td> <td>≥ %d points</td> <td>≥ %d%%</td> </tr> \n",
     "<tr> <td>F</td> <td>&lt; %d points</td> <td>&lt; %d%%</td> </tr> \n",
     "</tbody> </table>\"\"\"\n",
-    "\n",
-    "\n",
-    "discrete_threshold_table = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
-    "<th>Letter Grade</th> \n",
-    "<th>Core Learning Targets</th> \n",
-    "<th>Supplemental Targets</th> </tr> \n",
-    "</thead> \n",
-    "<tbody> \n",
-    "<tr> <td>A</td> <td>Master %d </td> <td>Master %d, Proficient %d</td> </tr> \n",
-    "<tr> <td>B</td> <td>Master %d, Proficient %d</td>Master %d, Proficient %d <td></td> </tr> \n",
-    "<tr> <td>C</td> <td>Master %d, Proficient %d</td> <td>Master %d, Proficient %d</td> </tr> \n",
-    "<tr> <td>D</td> <td>Proficient %d</td> <td>Proficient %d</td> </tr> \n",
-    "<tr> <td>F</td> <td>Proficient &lt; %d</td> <td>----</td> </tr> \n",
-    "</tbody> </table>\"\"\"\n",
-    "\n",
-    "# print(discrete_threshold_table % final_321)\n",
     "\n",
     "def decide_letter_grade(individual):\n",
     "#    print(threshold_table)\n",
@@ -151,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -204,7 +175,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"144final.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"242seatedmidterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -236,7 +207,7 @@
     "               'IA1', 'IA2', 'IA3', 'IA4',\n",
     "               'IF1', 'IF2', 'WebAssign']\n",
     "\n",
-    "better_cols = math144_better_cols # math242_better_cols if course==\"math242\" else math243_better_cols\n",
+    "better_cols = math242_better_cols # if course==\"math242\" else math243_better_cols\n",
     "\n",
     "df.columns = better_cols\n",
     "\n",
@@ -257,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,34 +286,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # temporary stuff:\n",
-    "# midtermOrFinal = \"Final\"\n",
-    "# #extra_text = \"<h2>Final course grade</h2>\"\n",
-    "#extra_text_242 = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
     "\n",
-    "## for 243:\n",
-    "#extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
-    "#extra_text = \"Final grades after checkpoint 15 was completed.\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "# for individual in class_scores: \n",
-    "#     print_the_report_for(individual)\n",
-    "\n",
-    "midtermOrFinal = \"Final\"\n",
-    "# extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward. <br><br>I adjusted the grades so that an A can have one grade below P since DA7 just showed up this weekend.\"\n",
+    "midtermOrFinal = \"Midterm\"\n",
+    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward. <br><br>I adjusted the grades so that an A can have one grade below P since DA4, 5, and 6 just showed up this weekend; so if you missed one of those three, you can still get an A.\"\n",
     "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> this is prepared during Thanksgiving week.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15, 16 and during the finals week. You also can work on every WebAssign assignment until 12/6<p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
-    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "#extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
     "\n",
     "\n",
-    "course = \"math144\"  #math242 or math243 as a string\n",
+    "course = \"math242\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = final_144 # final_242 if course==\"math242\" else final_243\n",
+    "threshold_table = midterm_242 # final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
     "threshold_html_table = calculus_threshold_table % threshold_table"
@@ -350,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
