Fall 2022 midterm grader.

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"321midterm.csv\"\n",
+    "filename_change_if_youre_testing = \"321-midterm.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,9 +176,9 @@
     "def decide_letter_grade(individual):\n",
     "    threshold = {\"A\": {\"Core Mastered\": threshold_table[0], \"Core Proficient\": 0,\n",
     "                     \"Supplemental Mastered\": threshold_table[1], \"Supplemental Proficient\": threshold_table[1]+threshold_table[2]-1},\n",
-    "              \"B\": {\"Core Mastered\": threshold_table[3], \"Core Proficient\": threshold_table[3] + threshold_table[4] - 1,\n",
+    "              \"B\": {\"Core Mastered\": threshold_table[3], \"Core Proficient\": threshold_table[3] + threshold_table[4],\n",
     "                     \"Supplemental Mastered\": threshold_table[5], \"Supplemental Proficient\": threshold_table[5]+threshold_table[6]-1},\n",
-    "              \"C\": {\"Core Mastered\": threshold_table[7], \"Core Proficient\": threshold_table[7] + threshold_table[8] - 1,\n",
+    "              \"C\": {\"Core Mastered\": threshold_table[7], \"Core Proficient\": threshold_table[7] + threshold_table[8],\n",
     "                     \"Supplemental Mastered\": threshold_table[9], \"Supplemental Proficient\": threshold_table[9]+threshold_table[10]-1},\n",
     "              \"D\": {\"Core Mastered\": 0, \"Core Proficient\": threshold_table[11],\n",
     "                     \"Supplemental Mastered\": 0, \"Supplemental Proficient\": threshold_table[12]},\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,19 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes!</h2><p> <b>Note:</b> this is prepared Thanksiving week.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "midtermOrFinal = \"midterm\"\n",
+    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.<br/><br/> Remember that you need to get at all core learning targets (such as L5) correct at least once in order to get a C or better.\"\n",
+    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
     "#extra_text = \"After checkpoint 15\"\n",
     "#extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
-    "\n",
     "\n",
     "for student in class_scores:\n",
     "    print_the_report_for(student)\n",
@@ -258,13 +257,6 @@
     "\n",
     "#print_the_report_for(class_scores[5])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -283,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
