--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "## Name     |  full name:  last, first\n",
     "## Marks    |  a namedtuple of type Marks\n",
     "## WebAssign|  WebAssign score (whole number, max 100)\n",
-    "## Raw Data |  full pandas Series whose index is the Name above\n"
+    "## Raw Data |  full pandas Series whose index is the Name above"
    ]
   },
   {
@@ -29,53 +29,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "midterm_144 = (\"Through 3.5\", \n",
+    "midterm_144 = (\"Through 3.5\", # WebAssign sections\n",
     "               21, 80,  #A \n",
     "               19, 2, 70, #B\n",
     "               16, 4, 60, #C\n",
     "               14, 50,  #D\n",
     "               14, 50) #F\n",
     "\n",
-    "final_144 = (\"(all)\", \n",
+    "final_144 = (\"(all)\", # WebAssign sections\n",
     "               48, 80,  #A \n",
     "               40, 2, 70, #B\n",
     "               34, 6, 60, #C\n",
     "               30, 50,  #D\n",
     "               30, 50) #F\n",
     "\n",
-    "midterm_243 = (\"(12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)\", \n",
+    "midterm_243 = (\"(12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)\", # WebAssign sections\n",
     "               20, 80,  #A \n",
     "               18, 2, 70, #B\n",
     "               14, 4, 60, #C\n",
     "               12, 50,  #D\n",
     "               12, 50) #F\n",
     "\n",
-    "final_243 = (\"(all)\", \n",
+    "final_243 = (\"(all)\", # WebAssign sections\n",
     "               44, 80,  #A \n",
     "               37, 2, 70, #B\n",
     "               33, 6, 60, #C\n",
     "               29, 50,  #D\n",
     "               29, 50) #F\n",
     "\n",
-    "midterm_242 = (\"(through section 3.7)\", \n",
+    "midterm_242 = (\"(through section 3.7)\", # WebAssign sections\n",
     "               21, 80,  #A \n",
     "               19, 2, 70, #B\n",
     "               16, 4, 60, #C\n",
     "               14, 50,  #D\n",
     "               14, 50) #F\n",
     "\n",
-    "final_242 = (\"(all)\", \n",
+    "final_242 = (\"(all)\", # WebAssign sections\n",
     "               43, 80,  #A \n",
     "               36, 2, 70, #B\n",
     "               32, 6, 60, #C\n",
     "               28, 50,  #D\n",
     "               28, 50) #F\n",
     "\n",
-    "calculus_threshold_table = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
+    "midterm_123 = (\"(through section 2.5)\", # WebAssign sections\n",
+    "               24, 80,  #A \n",
+    "               21, 2, 70, #B\n",
+    "               18, 4, 60, #C\n",
+    "               17, 50,  #D\n",
+    "               17, 50) #F\n",
+    "\n",
+    "final_123 = (\"(all)\", # WebAssign sections\n",
+    "               44, 80,  #A \n",
+    "               38, 2, 70, #B\n",
+    "               35, 6, 60, #C\n",
+    "               28, 50,  #D\n",
+    "               28, 50) #F\n",
+    "\n",
+    "html_threshold_template = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
     "<th>Letter Grade</th> \n",
     "<th>Course Learning Targets</th> \n",
     "<th>WebAssign Homework %s</th> </tr> \n",
@@ -90,7 +104,7 @@
     "\n",
     "def decide_letter_grade(individual):\n",
     "#    print(threshold_table)\n",
-    "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 1, \"WebAssign\": threshold_table[2]},\n",
+    "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 0, \"WebAssign\": threshold_table[2]},\n",
     "           \"B\": {\"Points\": threshold_table[3], \"Below P\": threshold_table[4], \"WebAssign\": threshold_table[5]},\n",
     "           \"C\": {\"Points\": threshold_table[6], \"Below P\": threshold_table[7], \"WebAssign\": threshold_table[8]},\n",
     "           \"D\": {\"Points\": threshold_table[9], \"Below P\": 1000, \"WebAssign\": threshold_table[10]},  \n",
@@ -122,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +189,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"242seatedmidterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"123-midterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -197,23 +211,23 @@
     "               'S1', 'S2', 'S3', 'S4', 'S5', \n",
     "               'P1', 'P2', 'P3', 'WebAssign']\n",
     "\n",
-    "math242_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
-    "               'F1', 'F2',\n",
-    "               'L1', 'L2', \n",
-    "               'D1', 'D2', \n",
-    "                       'DC1', 'DC2', 'DC3', 'DC4', 'DC5',\n",
-    "                       'DA1', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6',\n",
-    "                       'INT1', 'INT2', 'INT3', 'INT4', 'INT5', \n",
-    "               'IA1', 'IA2', 'IA3', 'IA4',\n",
-    "               'IF1', 'IF2', 'WebAssign']\n",
+    "math123_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', 'Course ID',\n",
+    "               'A1', 'A2',\n",
+    "               'T1', 'T2', 'T3', 'T4', 'T5',\n",
+    "               'G1', 'G2', 'G3',\n",
+    "               'I1', 'I2',\n",
+    "               'AT1', 'AT2', 'AT3', 'AT4', 'AT5',\n",
+    "               'O1', 'O2', 'O3',\n",
+    "               'V1', 'V2', 'V3',   \n",
+    "               'C2', 'C2', 'C3', 'C4', 'C5', 'WebAssign']\n",
     "\n",
-    "better_cols = math242_better_cols # if course==\"math242\" else math243_better_cols\n",
+    "better_cols = math123_better_cols # if course==\"math242\" else math243_better_cols\n",
     "\n",
     "df.columns = better_cols\n",
     "\n",
     "## Make a better index column and dump everything not grade-related\n",
     "df['Name'] = df['Last Name'] + ', ' + df['First Name']\n",
-    "df.drop(['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability'], axis=1, inplace=True)\n",
+    "df.drop(['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', 'Course ID'], axis=1, inplace=True)\n",
     "df.set_index(\"Name\", inplace=True)\n",
     "\n",
     "\n"
@@ -228,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,29 +300,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward. <br><br>I adjusted the grades so that an A can have one grade below P since DA4, 5, and 6 just showed up this weekend; so if you missed one of those three, you can still get an A.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> this is prepared during Thanksgiving week.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15, 16 and during the finals week. You also can work on every WebAssign assignment until 12/6<p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 8<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
     "#extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
     "\n",
     "\n",
-    "course = \"math242\"  #math242 or math243 as a string\n",
+    "course = \"math123\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_242 # final_242 if course==\"math242\" else final_243\n",
+    "threshold_table = midterm_123 # final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
-    "threshold_html_table = calculus_threshold_table % threshold_table"
+    "threshold_html_table = html_threshold_template % threshold_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
