Updated final sp 23

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -61,7 +61,7 @@
     "               29, 50,  #D\n",
     "               29, 50) #F\n",
     "\n",
-    "midterm_242 = (\"(through section 3.7)\", # WebAssign sections\n",
+    "midterm_242 = (\"(through section 3.5)\", # WebAssign sections\n",
     "               21, 80,  #A \n",
     "               19, 2, 70, #B\n",
     "               16, 4, 60, #C\n",
@@ -189,7 +189,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"123-midterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"242-final.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -201,6 +201,15 @@
     "               'EL1', 'EL2', 'EL3', 'EL4', 'EL5',\n",
     "               'INT1', 'INT2', 'INT3', 'INT4', 'INT5', 'INT6',        \n",
     "               'IT1', 'IT2', 'WebAssign']\n",
+    "\n",
+    "math242_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', 'Course ID',\n",
+    "               'F1', 'F2', \n",
+    "               'L1', 'L2',\n",
+    "               'D1', 'D2', 'DC1', 'DC2', 'DC3', 'DC4', 'DC5',\n",
+    "               'DA1', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6',\n",
+    "               'INT1', 'INT2', 'INT3', 'INT4', 'INT5',       \n",
+    "               'IA1', 'IA2', 'IA3', 'IA4',\n",
+    "               'IF1', 'IF2', 'WebAssign']\n",
     "\n",
     "math243_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
     "               'V1', 'V2', 'V3', 'V4', 'V5',\n",
@@ -221,7 +230,7 @@
     "               'V1', 'V2', 'V3',   \n",
     "               'C2', 'C2', 'C3', 'C4', 'C5', 'WebAssign']\n",
     "\n",
-    "better_cols = math123_better_cols # if course==\"math242\" else math243_better_cols\n",
+    "better_cols = math242_better_cols # if course==\"math242\" else math243_better_cols\n",
     "\n",
     "df.columns = better_cols\n",
     "\n",
@@ -305,16 +314,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 8<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
-    "#extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "midtermOrFinal = \"final\"\n",
+    "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 7<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
+    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
-    "\n",
-    "\n",
-    "course = \"math123\"  #math242 or math243 as a string\n",
+    "course = \"math242\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_123 # final_242 if course==\"math242\" else final_243\n",
+    "threshold_table = final_242 # final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
     "threshold_html_table = html_threshold_template % threshold_table"
@@ -350,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
