finally made the midterm_321 variable.

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"321-midterm.csv\"\n",
+    "filename_change_if_youre_testing = \"321-lastweek.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,17 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_scores = list()\n",
     "for index, row in df.iterrows():\n",
+    "\n",
     "    coreMarks = DiscreteMarks(row[\"Core Mastered\"],\n",
     "                              row[\"Core Proficient\"] + row[\"Core Mastered\"])\n",
     "    supplementMarks = DiscreteMarks(row[\"Supplemental Mastered\"], \n",
     "                                    row[\"Supplemental Proficient\"] + row[\"Supplemental Mastered\"])\n",
-    "\n",
+    "    \n",
     "    row = row.drop([\"Core Mastered\", \"Core Proficient\", \"Supplemental Mastered\", \"Supplemental Proficient\"])\n",
     "    raw = pd.DataFrame({'Standard':row.index, 'Marks':row.values})\n",
     "    raw = raw.dropna()\n",
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@
     "</tbody> </table>\"\"\"\n",
     "\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_321 # ... hard coded :-(\n",
+    "threshold_table = midterm_321 if midtermOrFinal == \"midterm\" else final_321 \n",
     "\n",
     "\n",
     "\n",
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
-    "midtermOrFinal = \"midterm\"\n",
-    "extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.<br/><br/> Remember that you need to get at all core learning targets (such as L5) correct at least once in order to get a C or better.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
+    "midtermOrFinal = \"final\"\n",
+    "# extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.<br/><br/> Remember that you need to get at all core learning targets (such as L5) correct at least once in order to get a C or better.\"\n",
+    "extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. </p> <p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
     "#extra_text = \"After checkpoint 15\"\n",
     "#extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
     "\n",
@@ -275,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
