Added a midterm and final to calc 1.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
-    "Individual = collections.namedtuple('Individual', ['Name', 'Marks', 'WebAssign', 'RawData'])\n",
+    "Individual = collections.namedtuple('Individual', ['Name', 'Marks', 'WebAssign', 'Exam', 'RawData'])\n",
     "Marks = collections.namedtuple('Marks', ['Score', 'NumberOfNs'])\n",
     "\n",
     "## Key      |   Data\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,18 @@
     "               29, 50,  #D\n",
     "               29, 50) #F\n",
     "\n",
-    "midterm_242 = (\"(through section 3.5)\", # WebAssign sections\n",
-    "               21, 80,  #A \n",
-    "               19, 2, 70, #B\n",
-    "               16, 4, 60, #C\n",
-    "               14, 50,  #D\n",
+    "midterm_242 = (\"(through section 3.5)\", \"Midterm\", # WebAssign sections\n",
+    "               21, 80, 10, #A \n",
+    "               19, 2, 70, 9, #B\n",
+    "               16, 4, 60, 7, #C\n",
+    "               14, 50, 5, #D\n",
     "               14, 50) #F\n",
     "\n",
-    "final_242 = (\"(all)\", # WebAssign sections\n",
-    "               43, 80,  #A \n",
-    "               36, 2, 70, #B\n",
-    "               32, 6, 60, #C\n",
-    "               28, 50,  #D\n",
+    "final_242 = (\"(all)\", \"Final\", # WebAssign sections\n",
+    "               43, 80, 10, #A \n",
+    "               36, 2, 70, 9, #B\n",
+    "               32, 6, 60, 7, #C\n",
+    "               28, 50, 5, #D\n",
     "               28, 50) #F\n",
     "\n",
     "midterm_123 = (\"(through section 2.5)\", # WebAssign sections\n",
@@ -83,7 +83,7 @@
     "               17, 50) #F\n",
     "\n",
     "final_123 = (\"(all)\", # WebAssign sections\n",
-    "               44, 80,  #A \n",
+    "               44, 80,   #A \n",
     "               38, 2, 70, #B\n",
     "               35, 6, 60, #C\n",
     "               28, 50,  #D\n",
@@ -92,33 +92,48 @@
     "html_threshold_template = \"\"\"<table class='paleGrayRows'> <thead> <tr> \n",
     "<th>Letter Grade</th> \n",
     "<th>Course Learning Targets</th> \n",
-    "<th>WebAssign Homework %s</th> </tr> \n",
+    "<th>WebAssign Homework %s</th> \n",
+    "<th>%s Exam marks above N</th></tr> \n",
     "</thead> \n",
     "<tbody> \n",
-    "<tr> <td>A</td> <td>≥ %d points and no scores below proficient</td> <td>≥ %d%%</td> </tr> \n",
-    "<tr> <td>B</td> <td>≥ %d points and at most %d scores below proficient</td> <td>≥ %d%%</td> </tr> \n",
-    "<tr> <td>C</td> <td>≥ %d points and at most %d scores below proficient</td> <td>≥ %d%%</td> </tr> \n",
-    "<tr> <td>D</td> <td>≥ %d points</td> <td>≥ %d%%</td> </tr> \n",
-    "<tr> <td>F</td> <td>&lt; %d points</td> <td>&lt; %d%%</td> </tr> \n",
+    "<tr> <td>A</td> <td>≥ %d points and no scores below proficient</td> <td>≥ %d%%</td> <td>%d</td></tr> \n",
+    "<tr> <td>B</td> <td>≥ %d points and at most %d scores below proficient</td> <td>≥ %d%%</td><td>%d</td> </tr> \n",
+    "<tr> <td>C</td> <td>≥ %d points and at most %d scores below proficient</td> <td>≥ %d%%</td><td>%d</td> </tr> \n",
+    "<tr> <td>D</td> <td>≥ %d points</td> <td>≥ %d%%</td> <td>%d</td> </tr> \n",
+    "<tr> <td>F</td> <td>&lt; %d points</td> <td>&lt; %d%%</td> <td></td> </tr> \n",
     "</tbody> </table>\"\"\"\n",
+    "\n",
+    "\n",
+    "midtermOrFinal = \"final\"\n",
+    "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
+    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 7<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
+    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
+    "\n",
+    "course = \"math242\"  #math242 or math243 as a string\n",
+    "# I'm an idiot an still have this midterm vs final; oh well\n",
+    "threshold_table = midterm_242 # final_242 if course==\"math242\" else final_243\n",
+    "\n",
+    "\n",
+    "threshold_html_table = html_threshold_template % threshold_table\n",
+    "\n",
     "\n",
     "def decide_letter_grade(individual):\n",
     "#    print(threshold_table)\n",
-    "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 0, \"WebAssign\": threshold_table[2]},\n",
-    "           \"B\": {\"Points\": threshold_table[3], \"Below P\": threshold_table[4], \"WebAssign\": threshold_table[5]},\n",
-    "           \"C\": {\"Points\": threshold_table[6], \"Below P\": threshold_table[7], \"WebAssign\": threshold_table[8]},\n",
-    "           \"D\": {\"Points\": threshold_table[9], \"Below P\": 1000, \"WebAssign\": threshold_table[10]},  \n",
-    "           \"F\": {\"Points\": threshold_table[11], \"Below P\": 1000, \"WebAssign\": 0}\n",
+    "    threshold = { \"A\": {\"Points\": threshold_table[2], \"Below P\": 0, \"WebAssign\": threshold_table[3], \"Exam marks\": threshold_table[4]},\n",
+    "           \"B\": {\"Points\": threshold_table[5], \"Below P\": threshold_table[6], \"WebAssign\": threshold_table[7], \"Exam marks\": threshold_table[8]},\n",
+    "           \"C\": {\"Points\": threshold_table[9], \"Below P\": threshold_table[10], \"WebAssign\": threshold_table[11], \"Exam marks\": threshold_table[12]},\n",
+    "           \"D\": {\"Points\": threshold_table[13], \"Below P\": 1000, \"WebAssign\": threshold_table[14], \"Exam marks\": threshold_table[15]},  \n",
+    "           \"F\": {\"Points\": threshold_table[16], \"Below P\": 1000, \"WebAssign\": 0}\n",
     "           # yes, I'm using 1000 as a threshold. I'm a teacher, not a programmer...\n",
     "          }\n",
     "    \n",
-    "    if individual.Marks.Score >= threshold['A'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"A\"][\"Below P\"] and individual.WebAssign >= threshold[\"A\"][\"WebAssign\"]:\n",
+    "    if individual.Marks.Score >= threshold['A'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"A\"][\"Below P\"] and individual.WebAssign >= threshold[\"A\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"A\"][\"Exam marks\"]:\n",
     "        return \"A\"\n",
-    "    elif individual.Marks.Score >= threshold['B'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"B\"][\"Below P\"] and individual.WebAssign >= threshold[\"B\"][\"WebAssign\"]:\n",
+    "    elif individual.Marks.Score >= threshold['B'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"B\"][\"Below P\"] and individual.WebAssign >= threshold[\"B\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"b\"][\"Exam marks\"]:\n",
     "        return \"B\"\n",
-    "    elif individual.Marks.Score >= threshold['C'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"C\"][\"Below P\"] and individual.WebAssign >= threshold[\"C\"][\"WebAssign\"]:\n",
+    "    elif individual.Marks.Score >= threshold['C'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"C\"][\"Below P\"] and individual.WebAssign >= threshold[\"C\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"C\"][\"Exam marks\"]:\n",
     "        return \"C\"\n",
-    "    elif individual.Marks.Score >= threshold['D'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"D\"][\"Below P\"] and individual.WebAssign >= threshold[\"D\"][\"WebAssign\"]:\n",
+    "    elif individual.Marks.Score >= threshold['D'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"D\"][\"Below P\"] and individual.WebAssign >= threshold[\"D\"][\"WebAssign\"] and individual.Exam >= threshold_table[\"D\"][\"Exam marks\"]:\n",
     "        return \"D\"\n",
     "    elif individual.Marks.Score >= threshold['F'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"F\"][\"Below P\"] and individual.WebAssign >= threshold[\"F\"][\"WebAssign\"]:\n",
     "        return \"F\"\n",
@@ -136,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -189,7 +204,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"242-final.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"242-midterm.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -209,7 +224,7 @@
     "               'DA1', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6',\n",
     "               'INT1', 'INT2', 'INT3', 'INT4', 'INT5',       \n",
     "               'IA1', 'IA2', 'IA3', 'IA4',\n",
-    "               'IF1', 'IF2', 'WebAssign']\n",
+    "               'IF1', 'IF2', 'WebAssign', 'Exam marks']\n",
     "\n",
     "math243_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
     "               'V1', 'V2', 'V3', 'V4', 'V5',\n",
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,34 +319,89 @@
     "    class_scores.append( Individual(Name=index, \n",
     "                                    Marks=summative(row.apply(marks_to_score)), \n",
     "                                    WebAssign=row.loc['WebAssign'], \n",
+    "                                    Exam=row.loc['Exam marks'],\n",
     "                                    RawData=raw) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "midtermOrFinal = \"final\"\n",
-    "#extra_text = \"This is a check-in for your progress as of the middle of the semester. For the midterm grade, I'm reporting only the plain letter grade, no +/-.  Remember this is only to <i>help you</i> see where you stand at this point so you can know where to focus going forward.\"\n",
-    "#extra_text = \"<h2>Almost the end of classes</h2><p> <b>Note:</b> This is being prepared for the last week of classes, up to and including checkpoint 14.  Note also the grade thresholds that must be met on the next page (including WebAssign grades).</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 15 this week and 16 during the finals week. You also can work on every WebAssign assignment until May 7<p>Happy with your grade? High five 🙌. You're done 🎉. Your grade will not decrease. If you do nothing else, this is your final grade.</p>\"\n",
-    "extra_text = \"This is the final grade report. Letter grade with any plus/minus will be reported to MyWSU. Please don't email me about grades.\"\n",
-    "\n",
-    "course = \"math242\"  #math242 or math243 as a string\n",
-    "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = final_242 # final_242 if course==\"math242\" else final_243\n",
-    "\n",
-    "\n",
-    "threshold_html_table = html_threshold_template % threshold_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "5\n",
+      "10\n",
+      "6\n",
+      "8\n",
+      "9\n",
+      "4\n",
+      "0\n",
+      "9\n",
+      "6\n",
+      "7\n",
+      "9\n",
+      "10\n",
+      "6\n",
+      "9\n",
+      "8\n",
+      "9\n",
+      "1\n",
+      "7\n",
+      "10\n",
+      "10\n",
+      "8\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "0\n",
+      "10\n",
+      "7\n",
+      "9\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "8\n",
+      "0\n",
+      "8\n",
+      "0\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "10\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "6\n",
+      "8\n",
+      "7\n",
+      "5\n",
+      "8\n",
+      "9\n",
+      "0\n",
+      "7\n",
+      "10\n",
+      "8\n",
+      "4\n",
+      "9\n",
+      "10\n",
+      "7\n",
+      "6\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#for individual in class_scores:\n",
@@ -357,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
